fixing rounded circles and animating them

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <h2>Features</h2>
           <div class="row">
             <div class="feature">
-              <div class="large-1 column"><i class="fa fa-line-chart fa-2x"></i></div>
+              <div class="large-1 column"><div class="circle-icon"><i class="fa fa-line-chart"></i></div></div>
               <div class="large-10 columns">
                 <p>Connect an unlimited amount of Errbit applications.</p>
               </div>
@@ -66,7 +66,7 @@
           </div>
           <div class="row">
             <div class="feature">
-              <div class="large-1 column"><i class="fa fa-exclamation-triangle fa-2x"></i></div>
+              <div class="large-1 column"><div class="circle-icon"><i class="fa fa-exclamation-triangle"></i></div></div>
               <div class="large-10 columns">
                 <p>Easily see your unresolved error counts.</p>
               </div>
@@ -74,7 +74,7 @@
           </div>
           <div class="row">
             <div class="feature">
-              <div class="large-1 column"><i class="fa fa-link fa-2x"></i></div>
+              <div class="large-1 column"><div class="circle-icon"><i class="fa fa-link"></i></div></div>
               <div class="large-10 columns">
                 <p>Connected applications link directly back to Errbit.</p>
               </div>
@@ -82,7 +82,7 @@
           </div>
           <div class="row">
             <div class="feature">
-              <div class="large-1 column"><i class="fa fa-refresh fa-2x"></i></div>
+              <div class="large-1 column"><div class="circle-icon"><i class="fa fa-refresh"></i></div></div>
               <div class="large-10 columns">
                 <p>Unresolved error counts refresh automatically so you don't have to.</p>
               </div>
